fix word wrap in message

--- a/app/assets/stylesheets/_messages_style.scss
+++ b/app/assets/stylesheets/_messages_style.scss
@@ -10,14 +10,12 @@
     padding: 5px;
 
     li.message {
-      display: table;
       width: 99%;
       padding: 5px;
       margin-bottom: 5px;
       @include border-radius(6px);
     
       .top {
-        width: 100%;
         font-weight: bold;
         font-size: .9em;
         @include text-shadow(0px 1px 1px rgba(255, 255, 255, 0.6));
@@ -34,7 +32,8 @@
 
       .content {
         font-size: 1.5em;
-        padding-top: 5px;
+        padding: 6px 0px;
+        word-wrap: break-word;
       }
             
       .readers {
